tests/baselines/reference/moduleNewExportBug.errors.txt
tests/cases/compiler/moduleNewExportBug.ts(10,14): error TS2694: Namespace 'mod1' has no exported member 'C'.


==== tests/cases/compiler/moduleNewExportBug.ts (1 errors) ====
    module mod1 {
    	interface mInt {
    		new (bar:any):any;
            foo (bar:any):any;
    	}
     
        class C { public moo() {}}
    }
    
    var c : mod1.C; // ERROR: C should not be visible
                 ~
!!! error TS2694: Namespace 'mod1' has no exported member 'C'.
    
    
    